2009-11-18  Meteor Liu  <meteor1113@gmail.com>

	* .emacs: Added.

	* init-site.el: Move some setting from init-winnt.el to here.
	Add some dirs to semantic-system-include.

	* init-basic.el: Move some setting from init-winnt.el to here.
	Add some dirs to ffap-c-path.

	* init-winnt.el: Delete.(Merge to init-basic.el and init-site.el)

2009-11-11  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Modify some comment.

2009-11-10  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (require): Add cscope setting.

	* lisp/decompile.el: Removed.

	* lisp/gtags.el: Removed.

	* lisp/pymacs.el: Removed.

	* lisp/xcscope.el: Removed.

	* init-misc.el: Remove ropemacs setting.
	Remove gtags.
	Remove cscope setting.
	Modify rope setting.

	* init-basic.el: Remove eldoc-mode for python.

2009-11-09  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Remove semanticdb-default-save-directory setting.

2009-11-08  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add eim setting.

2009-11-06  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (require): Add (require 'eassist nil t).

2009-11-05  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Change default ac-sources.

2009-10-31  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Add .emacs.d and it's subdirs to load-path.

2009-10-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Turn on eldoc-mode for emacs-lisp-mode and python-mode.

2009-09-25  Meteor Liu  <meteor1113@gmail.com>

	* init-rope.el (ropemacs-enable-autoimport): Delete.

	* init-misc.el (python-mode-hook): Merge init-rope.el to init-misc.el.

	* init-winnt.el (include-dirs): Add system include dirs for c-mode.

	* init-misc.el: Now can compatible with yasnippet.el.
	(require): Add some auto-complete initialize.
	(require): Let c-mode use auto-complete-cpp.

	* init-site.el (require): Rename init-cedet.el to init-site.el.
	(require): Merge init-jde.el to init-site.el.

2009-09-23  Meteor Liu  <meteor1113@gmail.com>
