@@ -1,3 +1,8 @@
+2009-11-25  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el: Add (global-cwarn-mode 1).
+	: Open (global-hl-line-mode t).
+
 2009-11-18  Meteor Liu  <meteor1113@gmail.com>
 
 	* .emacs: Added.
